manifest/dotnetapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetapi-service
  namespace: dotnetapi
spec:
  selector:
    app: dotnetapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
